--- a/www/index.css
+++ b/www/index.css
@@ -207,12 +207,10 @@
     width: 42px; }
   .global-footer__app-badge {
     margin-right: 25px; }
-  .global-footer__fandom-sections > div,
-  .global-footer__fandom-sections > ul,
-  .global-footer__wikia-sections > div,
-  .global-footer__wikia-sections > ul {
-    width: 100%;
-    margin: 0; }
+  .global-footer__fandom-section,
+  .global-footer__wikia-section {
+    margin: 0;
+    width: 100%; }
   .global-footer__wikia-section.is-overview {
     order: 5;
     width: 50% !important; }
